--- a/main.html
+++ b/main.html
@@ -9,12 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<h1>Time, Space, and Complexity</h1>
+	<h1>Time and Space Complexity</h1>
 
-	<p>Time complexity is a measure of the amount of time an algorithm takes to execute as a function of its input size. It is an essential factor in determining the performance and scalability of a program, as inefficient algorithms can lead to slow execution times and unresponsive applications.</p>
+	<p>Time complexity states the code is how efficient when it is executed.<p>
 
-	<p><b>Space complexity</b> refers to the total amount of memory space used by an algorithm/program, including the space of input values for execution. Calculate the space occupied by variables in an algorithm/program to determine space complexity. However, people frequently confuse Space-complexity with auxiliary space. O(n) – linear complexity – takes space directly proportional to the input size. O(n log n) – log-linear/quasilinear complexity – also called “linearithmic”, its space complexity grows proportionally to the input size and a logarithmic factor.</p>
-	
+	<p><b>Space complexity</b> is denoted by O(n).</p>	
 	
     <script type="text/javascript" src="./script.js">
 </script>
