--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
 	<p>Time complexity states the code is how efficient when it is executed.<p>
 
-	<p><b>Space complexity</b> is denoted by O(n).</p>	
+	<p><b>Space Complexity</b> is denoted by O(n).</p>	
 	
     <script type="text/javascript" src="./script.js">
 </script>
