--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 
 	<h1>Time and Space Complexity</h1>
 
-	<p>Time complexity states the code is how efficient when it is executed.<p>
+	<p>Time complexity states the code is how efficient when it is executed</p>
 
-	<p><b>Space Complexity</b> is denoted by O(n).</p>	
+	<p><b>Space Complexity</b> is denoted by O(n)</p>	
 	
     <script type="text/javascript" src="./script.js">
 </script>
